<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:backgroundTint="?attr/colorOnBackground"
    android:backgroundTintMode="src_over"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/header_text"
        android:textAppearance="@style/custom_font_style"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/headerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:queryBackground="@android:color/transparent"
        android:background="@drawable/search_view_background"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:backgroundTintMode="src_over"
        android:baselineAligned="false"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:queryHint="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText">

    </SearchView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/colorBackground"
        android:backgroundTint="?attr/colorOnBackground"
        android:backgroundTintMode="multiply"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/outerConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="?attr/colorOnBackground"
            android:backgroundTintMode="multiply">


            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/profile_name"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileDp" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/location_text"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileName" />

            <Button
                android:id="@+id/followButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/follow_text"
                android:textColor="?android:attr/textColor"
                app:cornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationText" />

            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/message_text"
                android:textColor="?android:attr/textColor"
                app:cornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followButton" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image2"
                app:layout_constraintEnd_toStartOf="@+id/image2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/image4" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="107dp"
                android:layout_height="107dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/image5"
                app:layout_constraintEnd_toStartOf="@+id/image3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/messageButton"
                app:srcCompat="@drawable/image5" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:srcCompat="@drawable/image6" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image5"
                app:layout_constraintEnd_toStartOf="@+id/image5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/image1" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="107dp"
                android:layout_height="107dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/image8"
                app:layout_constraintEnd_toStartOf="@+id/image6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image4"
                app:layout_constraintTop_toBottomOf="@+id/image2"
                app:srcCompat="@drawable/image2" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image5"
                app:srcCompat="@drawable/image3" />

            <ImageView
                android:id="@+id/image7"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image8"
                app:layout_constraintEnd_toStartOf="@+id/image8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/image7" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="107dp"
                android:layout_height="107dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/image9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image7"
                app:layout_constraintTop_toBottomOf="@+id/image5"
                app:srcCompat="@drawable/image8" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="107dp"
                android:layout_height="107dp"
                app:layout_constraintBottom_toBottomOf="@+id/image8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image8"
                app:srcCompat="@drawable/image9" />

            <Button
                android:id="@+id/seeMoreButton"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:text="@string/see_more_text"
                android:textColor="?android:attr/textColor"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image8" />

            <ImageView
                android:id="@+id/profileDp"
                android:layout_width="202dp"
                android:layout_height="173dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_pic" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerText"
        app:layout_constraintEnd_toStartOf="@+id/menuIcon" />

    <ImageView
        android:id="@+id/icon_hearts"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/headerText"
        app:layout_constraintStart_toEndOf="@+id/headerText"
        app:srcCompat="@drawable/ic_hearts_1" />


</androidx.constraintlayout.widget.ConstraintLayout>